#project name
PROJECT(Base)

#source file directory
AUX_SOURCE_DIRECTORY(./ SRC_LIST1)
AUX_SOURCE_DIRECTORY(./jsoncpp SRC_LIST2)

SET(LIBRARY_OUTPUT_PATH ./)

ADD_DEFINITIONS( -g -W -Wall -D_REENTRANT -D_FILE_OFFSET_BITS=64 -DAC_HAS_INFO
 -DAC_HAS_WARNING -DAC_HAS_ERROR -DAC_HAS_CRITICAL -DTIXML_USE_STL
 -DAC_HAS_DEBUG -DLINUX_DAEMON)

#head file path
INCLUDE_DIRECTORIES(./ ../ ./jsoncpp)
LINK_DIRECTORIES(./ ./slog/lib)

ADD_LIBRARY(base STATIC ${SRC_LIST1} ${SRC_LIST2})

TARGET_LINK_LIBRARIES(base pthread slog)
